<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_marginTop="15dip"
    android:layout_height="wrap_content">
    
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_marginTop="15dip"
    android:layout_height="wrap_content">
     <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
     />
     <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:layout_marginLeft="5px"
        android:singleLine="true"
        android:id="@+id/edittext_username"
        android:hint="@string/hint_username"/> 
</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_marginTop="15dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/password"
     />
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:password="true"
        android:id="@+id/edittext_password"
        android:hint="@string/hint_password"/>
</LinearLayout>
        
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/vicinity_prompt"
    />
    <Spinner 
        android:id="@+id/vicinity_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:prompt="@string/vicinity_prompt" 
    />
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:text="@string/eta_prompt"
    />
    <Spinner 
        android:id="@+id/eta_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dip"
        android:prompt="@string/eta_prompt"
    />
</LinearLayout>


